--- a/core/assets/form/form_question_rule_types/form_question_rule_type_contain/locale/en/lang_strings.xml
+++ b/core/assets/form/form_question_rule_types/form_question_rule_type_contain/locale/en/lang_strings.xml
@@ -10,7 +10,7 @@
 * | you a copy.                                                        |
 * +- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - +
 *
-* $Id: lang_strings.xml,v 1.4 2006/12/06 00:35:27 emcdonald Exp $
+* $Id: lang_strings.xml,v 1.5 2013/04/08 07:52:52 ewang Exp $
 *
 * Localised Strings File for Contain Form Question Rule Asset
 */
@@ -27,4 +27,9 @@
 <string source="core_form_rule_contain_edit_false_q">Response must NOT contain the response to %s</string>
 <string source="core_form_rule_contain_edit_true">Response must contain "%s"</string>
 <string source="core_form_rule_contain_edit_false">Response must NOT contain "%s"</string>
+
+<string source="core_form_rule_contain_desc_true_q_accessible">The response must contain the response to question "%1$s".</string>
+<string source="core_form_rule_contain_desc_false_q_accessible">The response must NOT contain the response to question "%1$s".</string>
+<string source="core_form_rule_contain_desc_true_accessible">The response must contain "%1$s".</string>
+<string source="core_form_rule_contain_desc_false_accessible">The response must NOT contain "%1$s".</string>
 </strings>
