--- a/core/assets/form/form_question_rule_types/form_question_rule_type_length/locale/en/lang_strings.xml
+++ b/core/assets/form/form_question_rule_types/form_question_rule_type_length/locale/en/lang_strings.xml
@@ -10,7 +10,7 @@
 * | you a copy.                                                        |
 * +- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - +
 *
-* $Id: lang_strings.xml,v 1.3 2006/12/06 00:35:29 emcdonald Exp $
+* $Id: lang_strings.xml,v 1.4 2013/04/08 07:52:53 ewang Exp $
 *
 *
 * Localised Strings File for Form Question Rule: Length
@@ -36,4 +36,11 @@
 <string source="core_form_rule_length_edit_&gt;=">Response must be at least %s character(s) in length</string>
 <string source="core_form_rule_length_edit_&lt;=">Response must be no more than %s character(s) in length</string>
 <string source="core_form_rule_length_section_note">Enter the number of characters to compare the length of the response against in the text box above.</string>
+
+<string source="core_form_rule_length_desc_==_accessible">The length of the response must be %1$s character(s).</string>
+<string source="core_form_rule_length_desc_!=_accessible">The length of the response must not be %1$s character(s).</string>
+<string source="core_form_rule_length_desc_&gt;_accessible">The length of the response must be greater than %1$s character(s).</string>
+<string source="core_form_rule_length_desc_&lt;_accessible">The length of the response must be less than %1$s character(s).</string>
+<string source="core_form_rule_length_desc_&gt;=_accessible">The length of the response must be at least %1$s character(s).</string>
+<string source="core_form_rule_length_desc_&lt;=_accessible">The length of the response must be no more than %1$s character(s).</string>
 </strings>
