--- a/core/assets/form/form_question_rule_types/form_question_rule_type_select_limit/locale/en/lang_strings.xml
+++ b/core/assets/form/form_question_rule_types/form_question_rule_type_select_limit/locale/en/lang_strings.xml
@@ -10,7 +10,7 @@
 * | you a copy.                                                        |
 * +- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - +
 *
-* $Id: lang_strings.xml,v 1.3 2006/12/06 00:35:29 emcdonald Exp $
+* $Id: lang_strings.xml,v 1.4 2013/04/08 07:52:53 ewang Exp $
 *
 * Localised Strings File for Selection Limit Form Question Rule Asset
 */
@@ -42,5 +42,13 @@
 <string source="core_form_rule_select_limit_error_&lt;">You have selected %1$s option(s) at question "%2$s" - you must select less than %3$s</string>
 <string source="core_form_rule_select_limit_error_&gt;=">You have selected %1$s option(s) at question "%2$s" - you must select at least %3$s</string>
 <string source="core_form_rule_select_limit_error_&lt;=">You have selected %1$s option(s) at question "%2$s" - you must select no more than %3$s</string>
+
+<string source="core_form_rule_select_limit_error_==_accessible">You have selected %1$s option(s). You must select %2$s.</string>
+<string source="core_form_rule_select_limit_error_!=_accessible">You have selected %1$s option(s). You must NOT select this many.</string>
+<string source="core_form_rule_select_limit_error_&gt;_accessible">You have selected %1$s option(s). You must select more than %2$s.</string>
+<string source="core_form_rule_select_limit_error_&lt;_accessible">You have selected %1$s option(s). You must select less than %2$s.</string>
+<string source="core_form_rule_select_limit_error_&gt;=_accessible">You have selected %1$s option(s). You must select at least %2$s.</string>
+<string source="core_form_rule_select_limit_error_&lt;=_accessible">You have selected %1$s option(s). You must select no more than %2$s.</string>
+
 <string source="core_form_rule_select_limit_note">Enter the number of selected options to compare against in the text box above.</string>
 </strings>
