--- a/core/assets/form/form_question_rule_types/form_question_rule_type_selection/locale/en/lang_strings.xml
+++ b/core/assets/form/form_question_rule_types/form_question_rule_type_selection/locale/en/lang_strings.xml
@@ -10,7 +10,7 @@
 * | you a copy.                                                        |
 * +- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - +
 *
-* $Id: lang_strings.xml,v 1.3 2006/12/06 00:35:29 emcdonald Exp $
+* $Id: lang_strings.xml,v 1.4 2013/04/08 07:52:53 ewang Exp $
 *
 * Localised Strings File for Selection Comparison Form Question Rule Asset
 */
@@ -23,4 +23,7 @@
 <string source="core_form_rule_selection_desc_false">Option "%1$s" must NOT be selected at "%2$s"</string>
 <string source="core_form_rule_selection_edit_true">Option "%1$s" must be selected</string>
 <string source="core_form_rule_selection_edit_false">Option "%1$s" must NOT be selected</string>
+
+<string source="core_form_rule_selection_desc_true_accessible">Option "%1$s" must be selected.</string>
+<string source="core_form_rule_selection_desc_false_accessible">Option "%1$s" must NOT be selected.</string>
 </strings>
