--- a/core/assets/form/form_question_types/form_question_type_tickbox_table/locale/en/lang_screen_details.xml
+++ b/core/assets/form/form_question_types/form_question_type_tickbox_table/locale/en/lang_screen_details.xml
@@ -10,7 +10,7 @@
 * | you a copy.                                                        |
 * +- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - +
 *
-* $Id: lang_screen_details.xml,v 1.4 2006/12/06 00:35:32 emcdonald Exp $
+* $Id: lang_screen_details.xml,v 1.5 2013/04/08 07:52:53 ewang Exp $
 */
 -->
 
@@ -23,6 +23,14 @@
 		<field attribute="note">
 			<display_name>Note</display_name>
 			<note>Explanatory text for this question.</note>
+		</field>
+		<field attribute="caption">
+			<display_name>Caption</display_name>
+			<note>Caption element of table.</note>
+		</field>
+		<field attribute="summary">
+			<display_name>Summary</display_name>
+			<note>Summary attribute of table element.</note>
 		</field>
 		<field>
 			<display_name>Question Contents</display_name>
