--- a/core/assets/form/form_question_rule_types/form_question_rule_type_begins_with/locale/en/lang_strings.xml
+++ b/core/assets/form/form_question_rule_types/form_question_rule_type_begins_with/locale/en/lang_strings.xml
@@ -10,7 +10,7 @@
 * | you a copy.                                                        |
 * +- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - +
 *
-* $Id: lang_strings.xml,v 1.4 2006/12/06 00:35:27 emcdonald Exp $
+* $Id: lang_strings.xml,v 1.4.34.1 2013/04/09 07:49:43 ewang Exp $
 *
 * Localised Strings File for Begins With Form Question Rule Asset
 */
@@ -27,4 +27,9 @@
 <string source="core_form_rule_begins_with_edit_false_q">Response must NOT begin with the response to %s</string>
 <string source="core_form_rule_begins_with_edit_true">Response must begin with "%s"</string>
 <string source="core_form_rule_begins_with_edit_false">Response must NOT begin with "%s"</string>
+
+<string source="core_form_rule_begins_with_desc_true_q_accessible">The response must begin with the response to question "%1$s".</string>
+<string source="core_form_rule_begins_with_desc_false_q_accessible">The response must NOT begin with the response to question "%1$s".</string>
+<string source="core_form_rule_begins_with_desc_true_accessible">The response must begin with "%1$s".</string>
+<string source="core_form_rule_begins_with_desc_false_accessible">The response must NOT begin with "%1$s".</string>
 </strings>
