--- a/core/assets/form/form_question_rule_types/form_question_rule_type_email/locale/en/lang_strings.xml
+++ b/core/assets/form/form_question_rule_types/form_question_rule_type_email/locale/en/lang_strings.xml
@@ -10,7 +10,7 @@
 * | you a copy.                                                        |
 * +- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - +
 *
-* $Id: lang_strings.xml,v 1.3 2006/12/06 00:35:27 emcdonald Exp $
+* $Id: lang_strings.xml,v 1.3.34.1 2013/04/09 07:49:43 ewang Exp $
 *
 * Localised Strings File for Valid Email Form Question Rule Asset
 */
@@ -21,4 +21,7 @@
 <string source="core_form_rule_email_false">Must Not Be a Valid E-mail Address</string>
 <string source="core_form_rule_email_desc_true">The response to "%s" must be a valid email address</string>
 <string source="core_form_rule_email_desc_false">The response to "%s" must NOT be a valid email address</string>
+
+<string source="core_form_rule_email_desc_true_accessible">The response must be a valid email address.</string>
+<string source="core_form_rule_email_desc_false_accessible">The response must NOT be a valid email address.</string>
 </strings>
