--- a/core/assets/form/form_question_rule_types/form_question_rule_type_numeric/locale/en/lang_strings.xml
+++ b/core/assets/form/form_question_rule_types/form_question_rule_type_numeric/locale/en/lang_strings.xml
@@ -10,7 +10,7 @@
 * | you a copy.                                                        |
 * +- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - +
 *
-* $Id: lang_strings.xml,v 1.3 2006/12/06 00:35:29 emcdonald Exp $
+* $Id: lang_strings.xml,v 1.3.34.1 2013/04/09 07:49:44 ewang Exp $
 *
 * Localised Strings File for Force Numeric Form Question Rule Asset
 */
@@ -23,4 +23,7 @@
 <string source="core_form_rule_numeric_desc_false">The response to question "%s" must NOT be a valid numeric value</string>
 <string source="core_form_rule_numeric_edit_true">Response must be a valid numeric value</string>
 <string source="core_form_rule_numeric_edit_false">Response must NOT be a valid numeric value</string>
+
+<string source="core_form_rule_numeric_desc_true_accessible">The response must be a valid numeric value.</string>
+<string source="core_form_rule_numeric_desc_false_accessible">The response must NOT be a valid numeric value.</string>
 </strings>
