--- a/core/assets/form/form_question_types/form_question_type_password/locale/en/lang_screen_details.xml
+++ b/core/assets/form/form_question_types/form_question_type_password/locale/en/lang_screen_details.xml
@@ -10,7 +10,7 @@
 * | you a copy.                                                        |
 * +- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - +
 *
-* $Id: lang_screen_details.xml,v 1.3 2006/12/06 00:35:31 emcdonald Exp $
+* $Id: lang_screen_details.xml,v 1.3.34.1 2013/04/09 07:49:44 ewang Exp $
 */
 -->
 
@@ -26,8 +26,16 @@
 		</field>
 	</section>
 	<section name="Question Options">
-	    <field attribute="name">
+		<field attribute="name">
 			<display_name>Title</display_name>
+			<note></note>
+		</field>
+		<field attribute="field_name">
+			<display_name>Field Name</display_name>
+			<note></note>
+		</field>
+		<field attribute="confirm_field_name">
+			<display_name>Confirm Field Name</display_name>
 			<note></note>
 		</field>
 		<field attribute="note">
