--- a/core/assets/form/form_question_types/form_question_type_password/locale/en/lang_strings.xml
+++ b/core/assets/form/form_question_types/form_question_type_password/locale/en/lang_strings.xml
@@ -10,7 +10,7 @@
 * | you a copy.                                                        |
 * +- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - +
 *
-* $Id: lang_strings.xml,v 1.3 2006/12/06 00:35:31 emcdonald Exp $
+* $Id: lang_strings.xml,v 1.3.34.1 2013/04/09 07:49:44 ewang Exp $
 *
 * Localised Strings File for Password Form Question Asset
 */
@@ -20,4 +20,8 @@
 <string source="core_form_password_length_&lt;=">Password field "%1$s" must be no more than %2$s characters</string>
 <string source="core_form_password_length_&gt;=">Password field "%1$s" must be no less than %2$s characters</string>
 <string source="core_form_password_entered_differently">Password field "%s" was entered differently on each try</string>
+
+<string source="core_form_password_length_&lt;=_accessible">Password must be no more than %1$s characters</string>
+<string source="core_form_password_length_&gt;=_accessible">Password must be no less than %1$s characters</string>
+<string source="core_form_password_entered_differently_accessible">These passwords don't match. Try again?</string>
 </strings>
