--- a/core/assets/form/form_question_types/form_question_type_tickbox_list/locale/en/lang_screen_details.xml
+++ b/core/assets/form/form_question_types/form_question_type_tickbox_list/locale/en/lang_screen_details.xml
@@ -10,7 +10,7 @@
 * | you a copy.                                                        |
 * +- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - +
 *
-* $Id: lang_screen_details.xml,v 1.8 2008/12/22 23:53:29 bpearson Exp $
+* $Id: lang_screen_details.xml,v 1.9 2013/04/19 06:36:02 ewang Exp $
 */
 -->
 
@@ -64,6 +64,7 @@
 		</field>
 	</section>
 	<section name="Simple Validation Rules">
+
 	    <field attribute="is_required">
 			<display_name>Required Entry?</display_name>
 			<note>If required, at least one tick-box must be chosen before the form can be submitted</note>
@@ -72,6 +73,13 @@
 			<display_name>Custom Required Error</display_name>
 			<note>This message will replace the default required error message</note>
 		</field>
+	    <field>
+		    <display_name>Condition</display_name>
+		    <function_call>
+			    <paint_function   name="paintCondition"   />
+			    <process_function name="processCondition" />
+		    </function_call>
+	    </field>
 	</section>
 	<section name="Complex Validation Rules" />
 	<section name="Add New Rule">
