--- a/core/assets/form/form_question_rule/locale/en/lang_strings.xml
+++ b/core/assets/form/form_question_rule/locale/en/lang_strings.xml
@@ -10,7 +10,7 @@
 * | you a copy.                                                        |
 * +- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - +
 *
-* $Id: lang_strings.xml,v 1.3 2006/12/06 00:35:27 emcdonald Exp $
+* $Id: lang_strings.xml,v 1.4 2013/04/19 06:36:00 ewang Exp $
 *
 * Localised Strings File for Form Question Rule Asset
 */
@@ -18,4 +18,14 @@
 
 <strings>
 <string source="core_form_rule_boolean_desc">This rule requires only the condition to be satisfied to be set.</string>
+
+<string source="core_form_rule_condition">Condition</string>
+<string source="core_form_rule_condition_text">Validate if the answer of </string>
+<string source="core_form_rule_condition_match">matches a regex</string>
+<string source="core_form_rule_condition_not_match">does not match a regex</string>
+<string source="core_form_rule_condition_greater_than">is greater than</string>
+<string source="core_form_rule_condition_less_than">is less than</string>
+<string source="core_form_rule_condition_not_set">No condition to run this validation</string>
+<string source="core_form_rule_condition_set">Run this validation when %1$s %2$s %3$s</string>
+<string source="core_form_rule_condition_add_condition">Add a condition to this validation rule?</string>
 </strings>
