--- a/core/assets/form/form_question_types/form_question_type_email_address/locale/en/lang_screen_details.xml
+++ b/core/assets/form/form_question_types/form_question_type_email_address/locale/en/lang_screen_details.xml
@@ -10,7 +10,7 @@
 * | you a copy.                                                        |
 * +- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - +
 *
-* $Id: lang_screen_details.xml,v 1.6 2006/12/06 00:35:30 emcdonald Exp $
+* $Id: lang_screen_details.xml,v 1.6.34.1 2013/04/22 03:02:36 ewang Exp $
 */
 -->
 
@@ -72,6 +72,13 @@
 			<display_name>Custom Required Error</display_name>
 			<note>This message will replace the default required error message</note>
 		</field>
+	<field>
+		<display_name>Condition</display_name>
+		<function_call>
+			<paint_function   name="paintCondition"   />
+			<process_function name="processCondition" />
+		</function_call>
+	</field>
 	</section>
 	<section name="Complex Validation Rules" />
 	<section name="Add New Rule">
