--- a/core/assets/form/form_question_types/form_question_type_numeric/locale/en/lang_screen_details.xml
+++ b/core/assets/form/form_question_types/form_question_type_numeric/locale/en/lang_screen_details.xml
@@ -10,7 +10,7 @@
 * | you a copy.                                                        |
 * +- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - +
 *
-* $Id: lang_screen_details.xml,v 1.6 2006/12/06 00:35:31 emcdonald Exp $
+* $Id: lang_screen_details.xml,v 1.6.34.1 2013/04/22 03:02:36 ewang Exp $
 */
 -->
 
@@ -64,6 +64,7 @@
 		</field>
 	</section>
 	<section name="Simple Validation Rules">
+
 	    <field attribute="is_required">
 			<display_name>Required Entry?</display_name>
 			<note>If required, this question must be filled before the form can be submitted</note>
@@ -76,6 +77,13 @@
 			<display_name>Enforce Integer</display_name>
 			<note>If set, this field must be an integer value before the form can be submitted. If not set, floating point values can be used.</note>
 		</field>
+	    <field>
+		    <display_name>Condition</display_name>
+		    <function_call>
+			    <paint_function   name="paintCondition"   />
+			    <process_function name="processCondition" />
+		    </function_call>
+	    </field>
 	</section>
 	<section name="Complex Validation Rules" />
 	<section name="Add New Rule">
